# cthulhubot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
cthulhu_discord_bot/: __init__.py  __main__.py
cthulhubot/: __init__.py  __main__.py
cthulhubot/backend/: bot.py  sound.py
cthulhubot/backend/cogs/: __init__.py  dice.py  legacy.py  probe.py
cthulhubot/backend/cthulhu/: probe.py
cthulhubot/backend/utils/: localization.py
cthulhubot/frontend/: cli.py
cthulhubot/sound/: success.m4a
locale/: de.json  en_US.json
sounds/: fail.m4a
