[tool.poetry]
name = "cthulhubot"
version = "1.6.0"
description = ""
authors = ["Tim Sabelmann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
"discord.py" = "^1.5.1"
PyNaCl = "^1.4.0"
click = "^8.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cthulhu = "cthulhubot.frontend.cli:main"